# Search-Youtube-Playlist

./: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  get-video.py  platforms.txt
.github/workflows/: build.yml
src/: main.rs
src/api_request/: api_response.rs  mod.rs
src/format_stdout/: mod.rs
