[package]
name = "search-yt-pl"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"

[[bin]]
name = "search-yt-pl"
path = "src/main.rs"
